--- a/_posts/2015-05-20-change.markdown
+++ b/_posts/2015-05-20-change.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "改变"
 date:   2015-05-20 13:07:11 +0800
-categories: fulin
+categories: life
 ---
 ## 从现在开始
  我们每天都在说要改变，但是我们每天还是在重复同样的事情。
