--- a/_posts/2015-05-27-good life.markdown
+++ b/_posts/2015-05-27-good life.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "好的生活习惯"
 date:   2015-05-27 13:07:11 +0800
-categories: fulin
+categories: life
 ---
 
 &nbsp;&nbsp;&nbsp;&nbsp;*读了很多年的书，也工作了很多年，到头来发现，有一个好的生活习惯比什么都重要....*。
