--- a/_posts/2015-11-19-vim.markdown
+++ b/_posts/2015-11-19-vim.markdown
@@ -44,7 +44,7 @@ categories: fulin
 	set helplang=cn             "帮助系统设置为中文
 	set foldmethod=syntax       "代码折叠
 	set nobackup                "不要普通的加~备份文件
-	set nowritebackup			"不要容灾的备份文件
+	set nowritebackup	    "不要容灾的备份文件
 	"\}\}
 	
 *这里需要注意在vim的配置文件中的引号是注释的作用*
@@ -67,7 +67,9 @@ categories: fulin
 	I                     表示当前字符的后面插入
 	i                     表示当前字符的前面插入
 	:12,15 co 20          将从12到15行的内容复制后粘贴到20行
-	:34					  跳转到34行
+	:34		      跳转到34行
+	f+		      查找当前行的下一个+号
+	.		      重复执行上一次修改
 
 
  掌握这些功能，就能处理平时大部分的服务器端编辑任务，当然，VI的功能是非常强大的，号称是伪装成编辑器的操作系统，也有人说这是神的编辑器。这个工具，需要我们持久的学习。
