add mysql update

--- a/_posts/2015-11-19-vim.markdown
+++ b/_posts/2015-11-19-vim.markdown
@@ -66,10 +66,15 @@ categories: fulin
 	O                     表示在上一行的行首插入
 	I                     表示当前字符的后面插入
 	i                     表示当前字符的前面插入
-	:12,15 co 20          将从12到15行的内容复制后粘贴到20行
+	:12,15 co 20          将从12到15行的内容复制后粘贴到20行     
 	:34		      跳转到34行
 	f+		      查找当前行的下一个+号
 	.		      重复执行上一次修改
+	;                     重复上一次的查找
+	,                     反向执行上一次的查找
+    :s/test/abcde         将当前行的第一个test替换成abcde
+	:s/te/abc/g           将当前行的所有te替换成abc
+    :%s/test/&/gn         统计字符串test在当前文件中出现的次数
 
 
  掌握这些功能，就能处理平时大部分的服务器端编辑任务，当然，VI的功能是非常强大的，号称是伪装成编辑器的操作系统，也有人说这是神的编辑器。这个工具，需要我们持久的学习。
