--- a/_posts/2016-09-21-mysql.markdown
+++ b/_posts/2016-09-21-mysql.markdown
@@ -102,11 +102,96 @@ categories: mysql
 		$ chkconfig --list | grep mysql
 
 
-## mysql基础的命令
+## mysql基础信息（[]表示可选）
+
+ * DBA和运维同学常用
 
 		-- 查看mysql版本信息
 		select version(); 
-		
+			
 		-- 查看字符集
-		show variables like '%collation%';  
-		show variables like '%char%';
+		show variables like '%collation%';
+		show variables like '%char%';	
+		
+		-- 查看是否打开二进制日志文件的功能	
+		show variables like '%log_bin%';
+
+		-- 查看有哪些数据库	
+		show databases;	
+
+		-- 查看数据库中有哪些表			
+		show tables from db_name;		
+
+		-- 查看表的字段信息
+		show COLUMNS from db_name.table_name
+
+		-- 查看表的信息	
+		show table status from db_name;		
+		
+		-- 查看MySQL本次启动后的运行时间(单位：秒)
+		show status like 'uptime';
+		
+		-- 查看select语句的执行数
+		show [global] status like 'com_select';
+		
+		-- 查看insert语句的执行数
+		show [global] status like 'com_insert';
+		
+		-- 查看update语句的执行数
+		show [global] status like 'com_update';
+		
+		-- 查看delete语句的执行数
+		show [global] status like 'com_delete';
+		
+		-- 查看试图连接到MySQL(不管是否连接成功)的连接数
+		show status like 'connections';
+		
+		-- 查看线程缓存内的线程的数量。
+		show status like 'threads_cached';
+		
+		-- 查看当前打开的连接的数量。
+		show status like 'threads_connected';
+		
+		-- 查看当前打开的连接的数量。
+		show status like 'threads_connected';
+		
+		-- 查看创建用来处理连接的线程数。
+		-- 如果Threads_created较大，你可能要增加thread_cache_size值。
+		show status like 'threads_created';
+		
+		-- 查看激活的(非睡眠状态)线程数。
+		show status like 'threads_running';
+		
+		-- 查看立即获得的表的锁的次数。
+		show status like 'table_locks_immediate';
+		
+		-- 查看不能立即获得的表的锁的次数。
+		-- 如果该值较高，并且有性能问题，你应首先优化查询，然后拆分表或使用复制。
+		show status like 'table_locks_waited';
+		
+		--查看创建时间超过slow_launch_time秒的线程数。
+		show status like 'slow_launch_threads';
+		
+		--查看查询时间超过long_query_time秒的查询的个数。
+		show status like 'slow_queries';
+		
+		-- 查看慢查询日志功能是否开启
+		show variables like '%slow%';
+
+		-- 多长时间才是慢查询
+		show variables like '%long%';
+
+		-- 设置查询超过1秒就是慢查询
+		set session long_query_time=1;
+
+		-- 查看日志信息是输出到数据库还是系统文件(FILE为系统文件)
+		show variables like 'log_output';
+
+		-- 查看发生了多少次慢查询
+		show global status like 'Slow_queries';
+
+		-- 将所有没有使用到索引的sql语句都记录到慢查询日志中
+		set global log_queries_not_using_indexes = true;
+
+		-- 查看数据库文件的路径
+		show variables like "%datadir%";
