add mysql update2

--- a/_posts/2015-11-19-vim.markdown
+++ b/_posts/2015-11-19-vim.markdown
@@ -4,11 +4,10 @@ title:  "vi的基本配置和常用命令"
 categories: fulin
 ---
 
-##vi的配置和使用要注意的问题
+* Table of Contents
+{:toc}
 
-       vi或者vim功能的强大是毋庸置疑的。全键盘的操作体验，快速定位，流畅的编辑能力。
-    但是还是有一些细节是需要注意的。
-	   这里记录一下我平时使用vim的配置情况和一些容易忘记的命令,方便以后查阅。
+> vi或者vim功能的强大是毋庸置疑的。全键盘的操作体验，快速定位，流畅的编辑能力。但是还是有一些细节是需要注意的。这里记录一下我平时使用vim的配置情况和一些容易忘记的命令,方便以后查阅。
 
 ### vi的基本配置(.vimrc文件的配置)
 	syn on                      "语法支持
