--- a/_posts/2015-06-12-eclipse.markdown
+++ b/_posts/2015-06-12-eclipse.markdown
@@ -5,6 +5,9 @@ date:   2015-05-20 13:07:11 +0800
 categories: fulin
 ---
 
+* Table of Contents
+{:toc}
+
 ##eclipse中的svn插件的问题
 &nbsp;&nbsp;&nbsp;&nbsp;eclipse中的svn插件叫subclipse。一般可以通过**Help > eclipse marketPlace > find**找到所需要的插件，直接安装就可以了。
 &nbsp;&nbsp;&nbsp;&nbsp;但是这样安装的插件有一个问题，就是版本不好控制。一般eclipse marketPlace中的插件都是最新版本的。所以有可能会造成兼容性的问题。
