--- a/_posts/2014-10-10-excel-vba.markdown
+++ b/_posts/2014-10-10-excel-vba.markdown
@@ -9,10 +9,10 @@ categories: mysql
 
 ### 数据库连接信息
 
-	Public Const IP As String = "10.103.16.186"
-	Public Const DB_NAME As String = "gstore_db"
-	Public Const USER As String = "sf_gstore"
-	Public Const PWD As String = "BJC8xxAQG2"
+	Public Const IP As String = "xx.xxx.xx.xxx"
+	Public Const DB_NAME As String = "xx"
+	Public Const USER As String = "xx"
+	Public Const PWD As String = "xx"
 	Public Const connStr As String = "DRIVER={MySQL ODBC 5.3 Unicode Driver};" & _
 	                                 "SERVER=" + IP + "; " & _
 	                                 "DATABASE=" + DB_NAME + ";" & _
