--- a/_posts/2016-10-12-fastJSON.markdown
+++ b/_posts/2016-10-12-fastJSON.markdown
@@ -37,16 +37,26 @@ categories: java
 
  * FastJson 的高级特性
 
-		支持注解、支持全类型序列化，这些都是很好的特性，功能强大
-		比如有一个注解：@JSONField;就可以实现序列号和反序列化的时候bean的属性名的灵活配置，非常实用。
+	*支持注解、支持全类型序列化，这些都是很好的特性，功能强大*
+
+
+	* 序列化形式可以自定义和灵活选择
+	
+		
+
+
+			比如有一个注解：@JSONField;就可以实现序列号和反序列化的时候bean的属性名的灵活配置，非常实用。
 		
 
 ### 源码解析
 	
  	![test](/image/fastJson.PNG)
 
- 已经有前辈总结了一套 **[FastJson的源码研究](http://www.csdn.net/article/2014-09-25/2821866)** 心得,可以先理解透彻再自己去看源代码。
+ 已经有前辈总结了心得,可以先理解透彻再自己去看源代码。
  记录在此，以后来完善。
 
+**[FastJson的源码研究](http://www.csdn.net/article/2014-09-25/2821866)**
 
- 	
+**[FastJson为什么这么快](http://www.iteye.com/topic/1113183)**
+
+**[FastJson SerializerFeature的使用](http://blog.csdn.net/u010246789/article/details/52539576)**
