--- a/_posts/2016-08-18-ssh.markdown
+++ b/_posts/2016-08-18-ssh.markdown
@@ -1,15 +1,205 @@
 ---
 layout: post
-title:	"SSH的点点滴滴"
+title:	"Linux相关知识点"
 date:	2016-08-10 13:07:11 +0800
 categories:	linux
 ---
 
 >
-以前看电影，黑客们在一个黑乎乎的界面的噼里啪啦一顿狂敲，往往能解决一个严重的问题，那个黑乎乎的界面上看上去是那么高端。
+以前看电影，黑客们在一个黑乎乎的界面上噼里啪啦一顿狂敲，然后某栋楼就停电了，那个黑乎乎的界面上看上去是那么高端和神秘，这其实就是Linux的世界......
 
-#### 什么是SSH
+## 文件系统
+	
+ 关于Linux的文件系统，可以查看这个官方的文档。
+
+ **[Linux文件系统](http://www.pathname.com/fhs)**
+ 
+ 这里还是做一些重要目录的总结吧，细节参考上面的文档。
+
+ * 重要目录
+ 
+		/dev/
+			Device files      
+			设备目录
+		/etc/
+			Host-Specific system configuration
+			配置文件以及服务启动的目录
+		/proc
+			显示内核及进程信息的虚拟文件系统
+		/tmp
+			Temporary files
+			临时文件目录
+		/home
+			普通用户目录
+		/var
+			Variable data
+			变化的目录，一般是日志文件的目录	   
+		/usr
+			Secondary hierarchy
+			用户程序,数据，帮助文件等的目录
+		/bin和/sbin和/usr/sbin 
+			系统的和用户的命令目录
+		/mnt
+			Mount point for mounting a filesystem
+			挂载点目录
+		/opt 
+			Add-on application sofeware packages
+			第三方软件目录
+
+ * 重要的配置文件
+ 
+		网卡的配置文件
+			/etc/sysconfig/network-scripts/ifcfg-eno16777736		
+		重启网卡
+			/etc/init.d/network restart
+		本地DNS配置文件
+			/etc/resolv.conf
+		记录开机要mount的文件系统的一个文件
+			/etc/fstab
+		存放开机自启动程序命令的文件
+			/etc/rc.local
+		设置系统启动时init进程将把系统设置成什么样的runlevel及加载相关的启动文件
+			/etc/inittab
+		系统全局环境变量的文件
+			/etc/profile
+		
+		
 	
 
-#### 常用的SSH工具有哪些怎样选择
+## 常用的重要命令，这些都是我经常使用的命令
 
+	halt 			
+		关机
+	reboot			
+		重启
+	shutdown
+		-r 重启
+		-h 关机
+	netstat 
+		-anp	 是查看所有进程和端口使用情况
+	centOS 7
+		的相关命令：
+		systemctl stop firewalld.service #停止firewall
+		systemctl disable firewalld.service #禁止firewall开机启动
+		firewall-cmd --state #查看默认防火墙状态（关闭后显示notrunning，开启后显示running）		
+	tar        		
+		压缩和解压缩命令：
+		tar zxvf nexus-3.0.1-01-unix.tar.gz -C /app/nexus/   将nexus-3.0.1-01-unix.tar.gz解压缩到/app/nexus/目录下
+		tar –czf jpg.tar.gz *.jpg 将所有的.jpg文件压缩为jpg.tar.gz包，使用的是gzip压缩		
+	fdisk 
+		查看磁盘分区的命令
+		-l查看所有的信息		  
+	useradd
+		增加用户的命令
+	passwd
+		修改密码的命令后面不跟用户名是修改当前用户的密码
+		passwd oldboy 是修改oldboy的密码
+		echo 123456|passwd --stdin oldboy  不用交互来修改oldboy的密码				
+	history 
+		查看执行命令的历史记录
+		-d 10 删除第10行的历史记录
+		-c 删除所有的
+	yum
+		是一个包管理工具，其实yum最终在安装的时候还是调用的rpm安装。
+	runlevel
+		查看当前系统的运行级别 
+	init
+		切换运行级别
+	grep
+		linux三剑客的老三,核心是过滤功能
+		-E 过滤多个字符串 grep -E "a|b" test.conf 将test.conf中的含有a和b的行过滤出来
+		-v 排除
+		-i 不区分大小写
+	sed
+		linux三剑客的老二，核心是按行取各种内容
+		-n 取消默认输出
+		sed -i s#fulin#fuqiang#g  test.conf 将test.conf中的fulin改成fuqiang			
+	netstat
+		查看网络状态的命令,是一个非常重要的命令，是五星级命令
+		[--tcp | -t]
+		[--udp | -u]
+		[--listening | -l]
+		[--all | -a]
+		[--numeric | -n]
+		[--program | -p]
+		一般使用组合参数：-lntup 或者 an
+	rm
+		删除命令
+		-f 彻底删除文件
+		-r 递归删除目录
+		-fr 递归删除目录和目录下面的文件		
+	cat	
+		显示文件内容
+		-n 显示行号
+	tac	
+		倒叙的显示文件内容,相当于执行了cat命令并且将执行结果倒叙输出
+	head
+		显示文件的头部，默认是10行
+		-20 显示20行		
+	tail
+		显示文件的尾部
+		-20 显示文件的尾部20行
+		-f 监控文件的尾部的变化
+		-20f 监控文件尾部的20行的变化		
+	which
+		查看命令所在路径和whereis ,locate,find功能相似
+	find
+		查找命令
+		-type 按类型查找
+		-name 按名称查找
+		-mtime 按修改时间查找		
+	xargs
+		用于把find、ls的输出交给后面处理		
+	tree
+		查看目录结构
+		-L 目录层次			
+	man	
+		查明命令的帮忙，是一个五星级命令
+	seq	
+		打印数字序列
+		-s 指定分隔符
+	tarch
+		创建文件或者修改文件时间戳
+	diff
+		比较文件内容差别
+	vimdiff
+		用vi比较文件内容差异
+	whoami
+		查看当前命令行终端用户
+	w
+		显示谁在登录这台机器并且在做什么
+	su
+		切换用户角色
+		注意要带上-
+	rpm	
+		软件安装命令
+		-ivh			
+	yum	
+		包管理工具，解决rpm包的依赖
+	chkconfig
+		查看设置开机自动启动软件的命令		
+	lsof
+		列表打开的文件，可以查看打开文件的一些状态,专家级别的运维专用的
+		-i :port 查看端口		
+	;	
+		是多个命令的分隔符
+	/	
+		根或者是路径的分隔符
+	<或者0<
+		标准输入重定向(stdin)，用来指定输入内容，后跟文件名
+	<<或者0<<
+		输入重定向，用来表示输入结束,也可以用ctrl+d来结束输入
+	>或者1>
+		标准输出重定向(stdout)，覆盖原来的文件
+	>>或者1>>
+		追加重定向,再原来的文件的结尾追加
+	2>
+		错误重定向,把错误信息输入到后面的文件中,会删除文件原因的内容
+	2>>	
+		错误追加重定向，把错误信息追加到后面的文件中
+	2>&1
+		把标准错误重定向到标准输出
+
+## 网友的优质博客
+
+ **[Linux文件系统详解](http://yangrong.blog.51cto.com/6945369/1288072)**
