--- a/_posts/2016-08-21-SSH3.markdown
+++ b/_posts/2016-08-21-SSH3.markdown
@@ -271,6 +271,10 @@ categories:	linux
 
 ## Linux中的磁盘分区和目录
 
+ 首先先看看磁盘的逻辑物理结构图
+
+ ![](/image/disk.PNG)
+
  常见的硬盘一般分为三类。IDE硬盘，SCSI硬盘和SATA硬盘。通常我们电脑上的硬盘都是IDE和SATA，而服务器一般用SCSI硬盘。SCSI的硬盘接口设备叫sd，第一块硬盘就是sda，第二块硬盘是sdb...以此类推。Linux规定，一块硬盘上最多存在四个主分区。命名方式分别是sda1，sda2，sda3，sda4。而逻辑分区从sd5开始，没有数量限制，命名方式为sd5，sd6...sd无穷大。主分区可以简单的理解为windows下的C盘，也就是系统分区，是引导操作系统必要的分区。而逻辑分区可以简单的理解为windows下的CDE盘等等。
 
  Linux磁盘分区不像windows把分区用盘符区分。在Linux中是先建立一个以根目录`/`为根节点的目录树,然后将磁盘分区挂载到相应的目录上，对于Linux文件系统的约定大致如下：
@@ -304,3 +308,7 @@ categories:	linux
 ## 网友的精彩总结
 
   **[知乎的总结](https://www.zhihu.com/question/22484307)**
+
+  **[磁盘的物理结构](http://blog.csdn.net/tianxueer/article/details/2689117)**
+
+  **[Linux中磁盘分区](http://baike.baidu.com/link?url=fdduBeLwvNeGlVfEYj-jT7QIe5FNgLKAfJKgdha6HkIMIQxIsaAYxWSTc_zbHfGudbiCOlEnHVGNHUXR2GIdt2OP3t90ByA4DLXZymMaqFdeturBjey9DW9jLULzJqjMMRNZn-PAahrdvPMvIvQRfa)**
