--- a/_posts/2016-10-20-regular.markdown
+++ b/_posts/2016-10-20-regular.markdown
@@ -5,6 +5,9 @@ date:	2016-10-20 13:07:11 +0800
 categories:	linux
 ---
 
+* Table of Contents
+{:toc}
+
 > 正则表达式就是一套处理字符串的规则和方法，基本上是以行为单位对字符串进行处理，通过特殊符号的辅助，我们可以快速的过滤替换字符串。
 > 
 > 这里作为自己常用的正则表达式的一个汇总，也作为复习使用
