--- a/_posts/2016-10-20-regular.markdown
+++ b/_posts/2016-10-20-regular.markdown
@@ -8,7 +8,7 @@ categories:	linux
 * Table of Contents
 {:toc}
 
-> 正则表达式就是一套处理字符串的规则和方法，基本上是以行为单位对字符串进行处理，通过特殊符号的辅助，我们可以快速的过滤替换字符串。
+> 正则表达式就是一套处理字符串的规则和方法，基本上是以行为单位对字符串进行处理，通过特殊符号的辅助，我们可以快速的过滤替换字符串，`这里的正则表达式不是linux中所有命令都能用的，大部分是三剑客（sed,grep,awk）用的，和开发语言使用的正则表达式有区别`。
 > 
 > 这里作为自己常用的正则表达式的一个汇总，也作为复习使用
 
@@ -37,6 +37,7 @@ categories:	linux
 		
 		grep "[^0-9]" /home/config.conf #匹配出含有数字之外字符的行
 		grep "[^a-Z]" /home/config.conf #匹配出含有字母之外字符的行
+		grep "^[^t]"  /home/config.conf #匹配出不是t开头的行
  * `{n,m}` 重复前一个字符n到m次
 
 ## 扩展正则表达式
