--- a/_posts/2016-08-18-SSH1.markdown
+++ b/_posts/2016-08-18-SSH1.markdown
@@ -122,6 +122,7 @@ categories:	linux
 	3，windows中是通过扩展名来区分文件类型，Linux中文件类型与扩展名无关
 	4，linux的命令中不要在=两边加空格
 	5，linux中删除很危险，一定要目标最小化，删除时要使用find | args组合可以最小化
+	6，如果服务启动很慢，需要在hosts中配置ip和主机名的映射
 	
 
 ## 命令总结
