--- a/_posts/2016-08-23-SSH5.markdown
+++ b/_posts/2016-08-23-SSH5.markdown
@@ -75,6 +75,9 @@ categories:	linux
  + setuid & setgid & setfacl & sbit的权限控制
  
 		这里不做总结了，因为用的比较少。 
+		这几个命令和目录的权限很特别，要知道，并能解释
+		/bin/passwd
+		/tmp
 		
 
  同样一表胜千言
