--- a/_posts/2016-10-28-VBAmima.markdown
+++ b/_posts/2016-10-28-VBAmima.markdown
@@ -11,7 +11,7 @@ categories:	Excel
 
  对excel的VBA工程进行加密，是一种非常必要的手段，可以防止代码被人篡改。但是有时会出现密码遗忘的问题，怎么找回原来的密码或者重新设置密码呢？
 
- ![](/image/VBA1.PNG)
+ ![](/image/vba1.PNG)
 
 ### 解决办法
 
