--- a/_posts/2016-08-21-SSH3.markdown
+++ b/_posts/2016-08-21-SSH3.markdown
@@ -223,6 +223,8 @@ categories:	linux
 	I/O size (minimum/optimal): 512 bytes / 512 bytes
 	Disk identifier: 0x00000000
 
+ ![](/image/diskTotal.PNG)
+
 ### 网卡
 
  命令 ` lspci | grep -i 'eth'` 查看网卡信息
@@ -275,7 +277,7 @@ categories:	linux
 
  ![](/image/disk.PNG)
 
- 常见的硬盘一般分为三类。IDE硬盘，SCSI硬盘和SATA硬盘。通常我们电脑上的硬盘都是IDE和SATA，而服务器一般用SCSI硬盘。SCSI的硬盘接口设备叫sd，第一块硬盘就是sda，第二块硬盘是sdb...以此类推。Linux规定，一块硬盘上最多存在四个主分区。命名方式分别是sda1，sda2，sda3，sda4。而逻辑分区从sd5开始，没有数量限制，命名方式为sd5，sd6...sd无穷大。主分区可以简单的理解为windows下的C盘，也就是系统分区，是引导操作系统必要的分区。而逻辑分区可以简单的理解为windows下的CDE盘等等。
+ 常见的硬盘一般分为三类。IDE硬盘，SCSI硬盘和SATA硬盘。通常我们电脑上的硬盘都是IDE和SATA，而服务器一般用SCSI硬盘。SCSI的硬盘接口设备叫sd，第一块硬盘就是sda，第二块硬盘是sdb...以此类推。Linux规定，一块硬盘上主分区和扩展分区总数不能超过4个，扩展分区又可以包含逻辑分区。主分区的命名方式分别是sda1，sda2，sda3，sda4。而逻辑分区从sd5开始，没有数量限制，命名方式为sd5，sd6...sd无穷大。主分区可以简单的理解为windows下的C盘，也就是系统分区，是引导操作系统必要的分区。而逻辑分区可以简单的理解为windows下的CDE盘等等。
 
  Linux磁盘分区不像windows把分区用盘符区分。在Linux中是先建立一个以根目录`/`为根节点的目录树,然后将磁盘分区挂载到相应的目录上，对于Linux文件系统的约定大致如下：
 
@@ -302,6 +304,12 @@ categories:	linux
  理论上来说我们可以为所有的目录都划分一个分区。没划分的文件和目录以及空余的硬盘一般都自动存放挂载到/根目录。因此如果你分区分的足够细，根目录所需的空间就很小。
 
  得一提的还有两点。第一点一般我们分区的时候都会单独划分一个swap分区，用于交换空间(也就是虚拟内存技术)，当内存满了的时候，系统会自动挑出一部分暂时不用的东西写到交换空间中用以释放内存，一般交换空间的大小不超过2G。设置的时候当内存小于2G时，swap可以设置为2G或真实内存的一半，真实大于2G就设置2G。第二点就是我们在硬盘分区的时候通常会让选择文件系统，因为Linux是以文件驱动的，用文件管理硬件，每一个硬件都映射到一个文件上进行管理，通常来说文件系统我们选择默认的ext4fs就可以了
+
+ + 磁盘分区的实质就是针对0磁道1扇区的前446字节后面接下来的64bytes的分区表进行设置，分区工具有fdisk和parted。前者适用于小于2T的磁盘分区，后者适用于大于2T的磁盘分区。
+ + 一块磁盘的分区表仅有64bytes大小，仅支持4个分区表信息（主分区+扩展分区）。
+ + 磁盘分区的最小单位是柱面
+ + 扩展分区不能直接使用，还需要在扩展分区的基础上创建逻辑分区
+ + 扩展分区有自己的分区表，因此，扩展分区下面的逻辑分区可以有多个
 
  *需要深刻的理解Linux的文件系统和系统分区，这里和 windows 是有很大区别的，如果不理解透彻，会带来很多的疑问*
 
