--- a/_posts/2016-08-23-SSH5.markdown
+++ b/_posts/2016-08-23-SSH5.markdown
@@ -152,4 +152,22 @@ categories:	linux
 
 	passwd oldboy
 	直接输入新密码
+
+## 企业中权限管理的最佳实践
+
+	根据公司内部的不同部门，不同职能，分层次，分等级的实现对linux服务器的权限最小化，规范化。
+	这样可以减少运维成本和安全隐患，使运维工作系统化，标准化，可量化。
+	
+	具体实施步骤，大致如下：
+
+	1，收集相关权限角色信息
+	2，根据具体的权限角色配置sudo文件
+	3，制定权限申请流程
+	4，用户讲解答疑和技术支持
+
+	详细的权限，大致可以这样划分：
+
+ ![](/image/rightConfig.PNG)
+
+    同时可以更进一步，通过sudo和syslog对用户的日志进行审计。
  
