--- a/_posts/2016-10-28-VBAmima.markdown
+++ b/_posts/2016-10-28-VBAmima.markdown
@@ -26,6 +26,8 @@ categories:	Excel
 
  ![](/image/VBA3.PNG)
 
+>  操作之前一定要对原始数据进行备份，否则数据丢失，这是血的教训，切记，切记！！！
+
 ### 内部机理
 
  说实话，我还没有搞清楚内部的实现原理，先记录在这里，等搞明白了，在补充。
