--- a/_posts/2016-02-20-asList.markdown
+++ b/_posts/2016-02-20-asList.markdown
@@ -10,7 +10,28 @@ categories:	java
 
 >*把工作中遇到的一些容易出错的知识点记录整理下来，时间长了就是一笔宝贵的财富，这就是经验...*
 
-### java.util.Arrays.ArrayList与java.util.ArrayList的有关问题
+## java中的NaN;无穷大;异常
+
+ * java中整数除以0将会产生一个异常
+ * 浮点数除以0将会产生一个无穷大
+ * 负数的平方根就是一个NaN
+
+ 代码示例
+
+	public static void main(String[] args){
+		System.out.println(2.1d/0);
+		System.out.println(Math.sqrt(-2));
+		System.out.println(1/0);
+	}
+
+将输出：
+
+	Infinity
+	NaN
+	Exception in thread "main" java.lang.ArithmeticException: / by zero
+		at com.fulin.test.test_local.Test4.main(Test4.java:8)
+
+## java.util.Arrays.ArrayList与java.util.ArrayList的有关问题
 
 问题是这样的，将数组转成List，通常我们习惯这样写成:
 
@@ -39,17 +60,16 @@ categories:	java
 
 换句话说，其实java.util.Arrays.ArrayList其实只是对数组做了一个装饰，可以看到里面的实现，E get(int index)、E set(int index, E element)等方法都是对数组的操作，他的目的只是提供了可以像访问List那样来访问数组而已。**本质上其实还是一个数组。**
 
-### java中的 &&;&;||;|;^ 这些运算符的区别
+## java中的 &&;&;||;|;^ 这些运算符的区别
 
- 如果阅读开源项目的源码,比如FastJson的源码，会发现，大量的使用了 & 和 | 运算符。但是这些运算符一般在我们自己的项目中是很少用的，时间一长就忘记了它的含义。这里总结一下。
+ 如果阅读开源项目的源码,比如FastJson的源码，会发现，大量的使用了 `&` 和 `|` 运算符。但是这些运算符一般在我们自己的项目中是很少用的，时间一长就忘记了它的含义。这里总结一下。
 
- * && 的含义就是逻辑与运算，操作数必须是boolean类型的。
- * || 的含义就是逻辑或运算，操作数必须是boolean类型的。
- * &  的含义就是按位与运算，操作数要么都是boolean类型，要么是char或int或long。
- * |  的含义就是按位或运算，操作数要么都是boolean类型，要么是char或int或long。
- * ^  的含义就是按位异或运算，按位进行相同为0，不同为1，操作数要么都是boolean类型，要么是char或int或long。
-
- *&& 运算符和 || 运算符都是短路运算符。但是 & 运算符 和 | 运算符不是短路运算符，这一点需要注意*
+ * `&&` 的含义就是逻辑与运算，操作数必须是boolean类型的。
+ * `||` 的含义就是逻辑或运算，操作数必须是boolean类型的。
+ * `&`  的含义就是按位与运算，操作数要么都是boolean类型，要么是char或int或long。
+ * `|`  的含义就是按位或运算，操作数要么都是boolean类型，要么是char或int或long。
+ * `^`  的含义就是按位异或运算，按位进行相同为0，不同为1，操作数要么都是boolean类型，要么是char或int或long。
+ * `&&` 运算符和 `||` 运算符都是短路运算符。但是 `&` 运算符 和 `|` 运算符不是短路运算符，这一点需要注意*
 
  举例如下：
 
