--- a/_posts/2016-11-17-python0.markdown
+++ b/_posts/2016-11-17-python0.markdown
@@ -28,4 +28,61 @@ categories: python
 
 	pip install ipython  //安装ipython
 
+## 安装MySQLdb-python遇到的问题
+ 
+ 学习python对数据库的支持的时候，因为手边有现成的mysql数据库，可以直接使用，就选择先学习python连接mysql。
+
+ * 首先是发现系统没有MySQLdb这个模块
+ 
+		import MySQLdb
+
+		Traceback (most recent call last):
+		File "test.py", line 3, in <module>
+		import MySQLdb
+		ImportError: No module named MySQLdb
+
+ * 使用pip进行安装
+	
+		pip install MySQLdb-python
+
+ * 然后给了我一个提示
+
+		You are using pip version 8.1.2, however version 9.0.1 is available.
+		You should consider upgrading via the 'python -m pip install --upgrade pip' command.
+
+ * 按照提示对pip进行升级
+
+		python -m pip install --upgrade pip
+
+ * 升级完成之后，再次安装
+	
+		pip install MySQLdb-python
+
+ * 这次报一个新的错误
+
+		error: Microsoft Visual C++ 9.0 is required (Unable to find vcvarsall.bat). Get it from http://aka.ms/vcpython27
+
+ * 安装提示安装  Microsoft Visual C++ 9.0
+ * 然后再次安装MySQLdb
+
+		pip install MySQLdb-python
+
+ * 这次又报了一个新的错误
+
+		error: command 'C:\\Users\\870850\\AppData\\Local\\Programs\\Common\\Microsoft\\Visual C++ for Python\\9.0\\VC\\Bin\\cl.exe' failed with exit status 2
+
+ * 上网搜索，发现这个问题很多人都遇到了，根据网友的提示，尝试手动安装，这这里找
+
+		http://www.lfd.uci.edu/~gohlke/pythonlibs
+
+ * 下载 `MySQL_python‑1.2.5‑cp27‑none‑win32.whl` 这个wheel安装包
+		
+		pip install D:\MySQL_python‑1.2.5‑cp27‑none‑win32.whl
+
+ * 终于安装好了，试试
+
+		import MySQLdb
+
+ * 没有异常，OK了
+
 ***很多时候，配置一个开发环境不容易，这是一个学习的过程，也是一个过坑的过程，把这些过程记录下来，战胜自己的遗忘***
