--- a/_posts/2014-09-10-javavmar.markdown
+++ b/_posts/2014-09-10-javavmar.markdown
@@ -30,6 +30,21 @@ categories: java
 
  什么时候开始类加载的第一阶段`加载`是由具体的虚拟机实现决定的，但是虚拟机规范严格要求
 
+##class文件结构
+
+ 魔数 	
+
+	0xCAFEBABE
+
+ 版本号
+
+	0x00000033
+
+ 常量池计数值
+
+	0x0016
+ 
+
 ## Java内存模型
 
  Java内存模型的目的就是定义程序中各个变量的访问规则，就是在java虚拟机中将变量存储到内存和从内存中将变量取出这样的细节。
@@ -38,3 +53,8 @@ categories: java
 	不包括局部变量和方法参数
 
  Java内存模型是围绕着在并发过程中如何处理原子性、可见性和有序性这3个特征来建立的
+
+##java多线程
+
+ 线程的引入可以把一个进程的资源分配和执行调度分开，各个线程既可以共享进程资源（内存地址，文件I/O等），又可以独立调度（线程是CPU调度的基本单元）。     
+ java中每个已经执行了start()方法且还未结束的java.lang.Thread类的实例就是一个线程，Thread类的大部分关键方式都是Native的，Native方法说明这个方法的实现没有使用或者无法实现平台无关的方法来实现（或者是为了追求效率不去实）。
