--- a/_posts/2014-09-10-javavmar.markdown
+++ b/_posts/2014-09-10-javavmar.markdown
@@ -13,6 +13,8 @@ categories: java
 ##java的含义
 
  java的起源 -->  跨平台 --> 字节码，虚拟机
+
+ ![](/image/java3.PNG)  
  
  java : java语言规范，java虚拟机规范
 
@@ -30,7 +32,35 @@ categories: java
 
  什么时候开始类加载的第一阶段`加载`是由具体的虚拟机实现决定的，但是虚拟机规范严格要求
 
+###验证（校验）
+
+验证的目的是取保class文件的字节流中的信息符合当前JVM的要求，并且不会危害JVM自身的安全。验证主要包括四个阶段。
+
++ **文件格式验证**，此阶段是基于二进制字节流进行的，保证输入的字节流能够正确的解析并存储于方法区，格式上符合描述一个java类的信息要求，通过此阶段之后，字节流才会进入内存的方法取进行存储。
+	
+	* 是否已魔数 0xCAFEBABE开头
+	* 主次版本号是否在当前虚拟机处理范围以内
+	* 常量池中的常量是否有不被支持的类型
+	* class文件本身是否有被删除或附加的信息
+	* .....
+
+
++ **元数据验证**，发生在方法区中，主要对语义，语法，此法进行分析，检查这个类是否能够顺利的编译
++ **字节码验证**，发生在方法区中，主要对方法体进行验证分析，保证被验证的类在运行时不会危害JVM。这个阶段是最复杂的，也可以说是用程序来验证程序逻辑，涉及到一个著名的停机问题。
++ **符号引用验证**，目的是确保解析动作能正常执行。符号引用验证可以看做是对类自身以外的信息进行匹配性校验。
+
+	* 符号引用中通过字符串描述的全限定名是否能找到对应的类
+	* 在指定类中是否存在符合方法的字段描述符以及简单名称所描述的方法和字段
+	* 符合引用中的类，字段，方法的访问性是否可以被当前类访问
+	* ......
+
 ##class文件结构
+
+ java的跨平台目标就是由不同平台的JVM实现的，JVM只关心Class文件，同时JVM并不关心Class的来源是何种语言，因此，Class的文件结构就至关重要。
+
+ java语言中的变量，关键字，运算符号的语义最终都是由多条字节码命令组合而成的，因此字节码指令所能提供的语义描述能力肯定比java语言本身更强大，这也为其他语言实现一些有别于java的语言特性提供了基础。
+
+ 类或接口并不一定以class文件的形式存在，也可能是二进制数据流。
 
  魔数 	
 
