--- a/_posts/2017-01-04-php-stop.markdown
+++ b/_posts/2017-01-04-php-stop.markdown
@@ -5,6 +5,9 @@ date:	2017-01-04 13:07:11 +0800
 categories: php
 ---
 
+* Table of Contents
+{:toc}
+
 > 接手了一个有5年历史的老系统（A系统），系统最开始是用`LAMP`这个经典组合进行开发的。我想刚好可以乘此机会学习一下PHP，但是当我开始学习后，过了2周，我放弃了.......
 > 这里总结一下我从入门到放弃的过程，汗.....
 
