--- a/_posts/2017-04-04-redis.markdown
+++ b/_posts/2017-04-04-redis.markdown
@@ -5,6 +5,37 @@ date:	2017-04-04 13:07:11 +0800
 categories: redis
 ---
 
+> redis是一个高性能的键值对数据库，redis是意大利人在2009年开发完成并开源的软件产品。
+> redis本身的含义是 *remote dictionary server (远程字典服务器)*，它以字典结构存储数据，并允许其他应用通过TCP协议读写字典中的内容。
+
+### redis的特点
+
+- 支持丰富的数据类型
+
+	字符串类型(string)，散列类型(hash)，列表类型(list)，集合类型(set)，有序集合类型(zset)
+
+- 内存存储和持久化
+
+	redis的数据存储在内存中，读写速度远快于硬盘，可以提供一秒10W+的键值的读写同时还提供了持久化的支持
+
+- 功能丰富
+
+	redis虽然是作为数据库开发的，但是越来越多的人将其作为缓存，队列系统使用
+
+- 简单稳定
+
+	redis提供了一系列简单的命令来操作redis
+
+### redis的启动和停止
+
+	启动：  ./bin/redis-server ./redis-conf
+	停止：  ./bin/redis-cli shutdown
+
+### 基本命令
+
+	keys *  //获取所有的键
+	type key //获取键key的类型
+	
 
 
 ### redis的事务
