--- a/source/_posts/2016-10-28-VBAmima.markdown
+++ b/source/_posts/2016-10-28-VBAmima.markdown
@@ -11,20 +11,20 @@ categories:	Excel
 
  对excel的VBA工程进行加密，是一种非常必要的手段，可以防止代码被人篡改。但是有时会出现密码遗忘的问题，怎么找回原来的密码或者重新设置密码呢？
 
- ![](/image/vba1.PNG)
+ ![](/content/image/vba1.PNG)
 
 ### 解决办法
 
  偶然间发现一个很好的解决方法，使用HXD软件直接修改。
 
- ![](/image/VBA2.PNG)
+ ![](/content/image/VBA2.PNG)
 
  + 用HXD打开excel。
  + 搜索“DPB=”，并替换成“DPx=”，保存文件。
  + 打开文件了，对VBA工程进行修改密码，这一步非常重要不然还是看不了源代码。
  + 再次打开exlel,用新的密码打开VBA工程，搞定！
 
- ![](/image/VBA3.PNG)
+ ![](/content/image/VBA3.PNG)
 
 >  操作之前一定要对原始数据进行备份，否则数据丢失，这是血的教训，切记，切记！！！
 
